# rust-pretty-assertions-sorted

./: Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: macros.rs
