[package]
authors = [
  "Darren Tsung <darren.tsung@gmail.com>",
]
edition = "2018"
name = "pretty_assertions_sorted"
version = "1.2.3"

description = "Wrapper around the `rust-pretty-assertions` crate that allows for the ability to sort the Debug output."
documentation = "https://docs.rs/pretty_assertions_sorted"
repository = "https://github.com/DarrenTsung/rust-pretty-assertions-sorted"

categories = ["development-tools"]
keywords = ["assert", "diff", "pretty", "color", "sort"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
darrentsung_debug_parser = "0.3.1"
pretty_assertions = "1.0"

[dev-dependencies]
chrono = "0.4.19"
indoc = "1.0"
serde_json = "1.0.85"
